--- a/index.html
+++ b/index.html
@@ -4,55 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="flex flex-col min-h-screen bg-gray-100 font-sans antialised">
+<body>
     
-    <nav class="bg-yellow-400 p-4 text-white flex justify-between">
-        <div>
-            <h1 class="text-3xl font-bold">AI Blog Generator</h1>
-        </div>
-
-        <div>
-            <a href="#" class="text-white hover:underline">Logout</a>
-        </div>
-    </nav>
-
-    <br>
-    <br>
-     <!-- Main -->
-    <div class="flex-grow container mx-auto mt-10 px-4 sm:px-0">
-        <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow-md transition-transform transform hover:scale-105 flex flex-col">
-            <!-- Introduction section -->
-            <div class="text-center">
-                <h2 class="text-2xl font-semibold mb-4">welcome to Ai summary video generator</h2>
-                <p class="text-gray-700">
-                    Transform lengthy videos into concise summaries with our AI-powered tool. Perfect for content creators, educators, and busy professionals, our service makes it easy to distill the key points of any video into a clear and actionable summary. Simply upload your video, and let our advanced AI do the rest. Save time, enhance your productivity, and ensure you never miss the important details again. Try it now and experience the future of content summarization!
-                </p>
-            </div>
-
-            <br>
-
-            <!-- Youtube Section -->
-             <div>
-                <h2 class="text-xl mb-4 font-semibold">Enter Youtube video link </h2>
-                <div class="flex space-x-4">
-                    <input type="url" name="" id="youtubelink" placeholder="paste your link here..." class="flex-grow p-2 border-blue-400 roundd-l-md">
-                    <button id="generateBlogButton" class="bg-blue-600 text-white px-4 py-2 rounded-r-md hover:bg-blue-700 transition-colors">Generate Blog summary</button>
-                </div>
-             </div>
-
-             <!-- Generated Blog Display Section -->
-              <section class="mt-10 flex-grow">
-                <h2 class="text-xl mb-4 font-semibold">Generated Blog Article</h2>
-                <div id="blogContent" class="mt-2 text-gray-700 space-y-4">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ducimus mollitia voluptatem amet eum quod magni reprehenderit, quidem, incidunt aliquam laborum voluptates. Sint magnam nesciunt doloremque quae animi perferendis laudantium!
-                </div>
-              </section>
-
-        </div>
-    </div>
-
+    <h1>Hello Happy new year 2025!</h1>
     
+
 </body>
 </html>
