add till margin

--- a/indexforcss.html
+++ b/indexforcss.html
@@ -10,10 +10,11 @@
     
 
     <h1 id="welcome">Hello world!</h1>
-    <h1 id="welcome">Hellothis is nanoter!</h1>
-    <h1 class="header">Tomi</h1>
-    <p class="header">Tomi</p>
-    <p class="header">Tomi</p>
+    <h1 class="header">Hellothis is nanoter!</h1>
+    <b>
+        <p class="header">Tomi vc</p>
+
+    </b>
 
 
 </body>
