margin and border push

--- a/indexforcss.html
+++ b/indexforcss.html
@@ -9,12 +9,22 @@
 <body>
     
 
-    <h1 id="welcome">Hello world!</h1>
-    <h1 class="header">Hellothis is nanoter!</h1>
-    <b>
-        <p class="header">Tomi vc</p>
+    <h1 class="header">Hello world!</h1>
+    <h1 id="welcome">Hellothis is annoter!</h1>
+    <h1 id="wth">Hellothis is annoter!</h1>
+    <h1 id="wtf">Hellothis is ridge!</h1>
+    <h1 id="wtc">Hellothis is outset!</h1>
+    <h1 id="wtd">Hellothis is inset!</h1>
 
-    </b>
+
+    <h1 id="welcum">Hellothis is nanoter!</h1>
+
+    <p class="header">Tomi</p>
+    <p class="nones">border none</p>
+    <p class="hides">border hidden</p> <br>
+    <hr>
+    <h2 class="mixx">border mix top right bottom left</h2>
+    <h3 class="mixx">border width manual</h3>
 
 
 </body>
