push till text decoration

--- a/indexforcss.html
+++ b/indexforcss.html
@@ -25,6 +25,21 @@
     <hr>
     <h2 class="mixx">border mix top right bottom left</h2>
     <h3 class="mixx">border width manual</h3>
+    <h3 class="hwx">hellowwww</h3>
+    <h3 class="hwx">borderellowwww width manual</h3>
+    <h3 class="outline">borderellowwww wiellowwwwdth manual</h3>
+
+    <hr>
+    <br>
+    <br>
+    <hr>
+    <h2> Starting Text styling</h2>
+    <hr>
+    <br>
+    <h1 id="textfirst">This is a text.</h1>
+    <a href="#">Send mail</a>
+
+
 
 
 </body>
