--- a/indexforcss.html
+++ b/indexforcss.html
@@ -9,7 +9,7 @@
 <body>
     
 
-    <h1 class="header">Hello world!</h1>
+    <!-- <h1 class="header">Hello world!</h1>
     <h1 id="welcome">Hellothis is annoter!</h1>
     <h1 id="wth">Hellothis is annoter!</h1>
     <h1 id="wtf">Hellothis is ridge!</h1>
@@ -40,8 +40,53 @@
     <a href="#">Send mail</a>
 
 
-    <h1 id="fontstyle">Font text change test</h1>
+    <h1 id="fontstyle">Font text change test</h1> -->
 
+    <table>
+
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+        </tr>
+        <tr>
+            <td>Ratul</td>
+            <td>28</td>
+        </tr>
+        <tr>
+            <td>Selina Balez</td>
+            <td>19</td>
+
+
+        </tr>
+
+
+    </table>
+
+    <p class="mgs">hi i love myself</p>
+
+    <h4>
+        hi
+        <!-- This is combinators descendant selectors -->
+        <b>hello</b>
+        <b>hello</b>
+        <p>
+            <b>Whats up</b>
+
+        </p>
+
+        <b>comoestas</b>
+    </h4>
+    <b>comoestas</b>
+    <b>comoestas</b>
+    <b>comoestas</b>
+
+
+    <div class="test">
+
+        <p>HI DEAR</p>
+
+
+    </div>
 
 
 
